<resources>
    <string name="app_name">TuitionApp</string>

    <string name="get_started">Get Started</string>
    <string name="findTutor">Find A Tutor</string>
    <string name="findTuition">Find A Tuition</string>
    <string name="justExplore">Just Explore</string>
    <string name="description1">Find Tutor Any Where Any Time </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_code">OTP Code</string>
    <string name="verify_code">Verify OTP</string>
    <string name="resend_code">Resend OTP</string>
    <string name="invalid_otp">Invalid OTP code.</string>

    <string name="update_profile">Update Profile</string>
    <string name="department">Department/Subject:</string>
    <string name="year">Year/Semester</string>
    <string name="contact_number">Contact</string>
    <string name="address_location">Address/Location</string>
    <string name="nid_student_id">NID/Student ID</string>
    <string name="university_college">University/College</string>
    <string name="content_description">image</string>
    <string name="privacy_policy">
        Provide Accurate Information\n
Information you provide is defined by any information you provide to us or other users in the registration, offering or posting process, in any public message area or through any email feature. You are solely responsible for your information, and we act as a passive conduit for your online distribution and publication of your information. Information you provide or any requests and services you post on the Site should not:\n (1) be false, inaccurate or misleading;\n (2) be fraudulent;\n (3) infringe any third party\'s copyright, patent, trademark, trade secret or other proprietary rights or rights of publicity or privacy;\n (4) violate any law, statute, ordinance or regulation (including, but not limited to, those governing export control, consumer protection, unfair competition, discrimination or false advertising);\n (5) be defamatory, trade libelous, unlawfully threatening or unlawfully harassing;\n (6) be obscene\n (7) contain any viruses or other computer programming routines that may damage, detrimentally interfere with, intercept or expropriate any system, data or personal information;\n (8) create liability for us or cause us to lose (in whole or in part) the services of our ISPs or other suppliers;\n (9) link directly or indirectly to or include descriptions of goods or services that: are prohibited under this Agreement; You may not post any request on the Site (or consummate any transaction that was initiated using our service) that could cause us to violate any applicable law, statute, ordinance or regulation. Neither you, Tutors nor Service Requesters Students) may manipulate the price (offer) of any item nor you may interfere with other user\'s postings or transactions. We may suspend or terminate your account if we suspect any, without limiting to, any of the above. Enable us to use the information you supply us with, so that we are not violating any rights you might have in that information, you agree to grant us a non-exclusive, worldwide, perpetual, irrevocable, royalty-free, sub licensable right to exercise the copyright, publicity, and database rights (but no other rights) you have in your information, in any media now known or not currently known. We will only use your information in accordance with our Privacy Policy. Information on the Site is proprietary or is licensed to “caretutors.com” by our users or third parties. You agree that you will not use any software or other automated means to access the Site for any purpose without our express written permission.
        App Permission\n
Tuition App needs certain permissions to run on Android and requires access to certain systems within your device. App can save personalize data for user. A common reason for storage permissions is that these data will help the user to get personalized App experience.\n
Text Messages And PUSH Notifications\n
We send various text messages and PUSH notifications to students/parents and tutors for notifying them about their tutor request and tuition updates.
        Privacy/n
We do not sell or rent your personal information to third parties for their marketing purposes without your explicit consent and we only use your information as described in the Privacy Policy. If you object to your information being transferred or used in this way please do not use our services.\n\n
Liability Limit\n
In no event will we, nor other party involved in the design, development and maintenance of the site, be liable for lost profits or any special, incidental or consequential damages arising out of or in connection with our app, our services or this agreement (however arising, including negligence).</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    We do not guarantee that we will meet user's requirements. We do not guarantee continuous,
    uninterrupted, secure access or error free operations to our services. The operation of this
    Site may be interfered with by numerous factors outside of our control./n
    You agree not to reproduce, duplicate, copy, sell, resell or exploit for any commercial
    purposes, any portion of the information provided by us, including any intellectual property
    rights of Tuition App or any person, firm or corporation having posted information for
    availability through the Services provided by us .\n

    <string name="intro_1">Find A Tuition and Make Money</string>
    <string name="intro_2">Find A Tutor For Your Lovely Kids</string>
    <string name="intro_3">Find At Your Convenient Area</string>

    <string name="desc_1">Browse or Post Ad Free.</string>
    <string name="desc_2">Find Tuition or Tutor in suitable way.</string>
    <string name="desc_3">Find Tutor for your children in your area.</string>
    <string name="post_tittle">Tittle of the post</string>
    <string name="class_hint">Class 9-10</string>
    <string name="subject_hint">Bangla, English, Math</string>
    <string name="tuition_fee_hint">4000-5000 BDT</string>

</resources>
